--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <<!DOCTYPE html>
 <html>
   <body>
-    <head>
-        g
-    </head>
+    <header>
+        <h1>git</h1>
+    </header>
+
 
   </body>
 </html>
