인코딩 설정 추가

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
       <title>git 소개</title>
   </head>
   <body>
@@ -13,11 +14,8 @@
       <li>Branch</li>
       <li>브랜치</li>
       <li>충돌</li>
-<<<<<<< HEAD
       <li>충돌해결</li>
-=======
       <li>원격저장소</li>
->>>>>>> master
 
     </ul>
 
