--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>git</h1>
     </header>
     <ul>
+      <li>sync.yang</li>
       <li>git이란?</li>
       <li>버전</li>
       <li>Branch</li>
